Change assert to null-check

Avoids a crash that would happen if readyRead was emitted after
calling ::close on the websocket.

Task-number: QTBUG-59179
Change-Id: I1e7bd19d99ee068b8699014fac9a72f839632c85
Reviewed-by: Timur Pocheptsov <timur.pocheptsov@qt.io>